<resources>
    <string name="app_name">Baby Manager</string>
    <string name="baby_name_label">Baby Name</string>
    <string name="baby_info_label">Baby Info</string>
    <string name="enter_name_hint">Enter name</string>
    <string name="dob_label_text">Date of Birth</string>
    <string name="enter_date_of_birth_hint">Enter date of birth</string>
    <string name="baby_s_gender_text">Baby\'s Gender</string>
    <string name="gender_text">Gender</string>
    <string name="i_am_text">I am</string>
    <string name="save_text">Save</string>
    <string name="string_save_text">Save</string>
    <string name="empty_text">text</string>
    <string name="home_text">Home</string>
    <string name="calendar_text">Calendar</string>
    <string name="graph_text">Graph</string>

    <string-array name="labels_array">
        <item>-</item>
        <item>Boy</item>
        <item>Girl</item>
    </string-array>

    <string-array name="persons_array">
        <item>Mom</item>
        <item>Dad</item>
        <item>Relative</item>
    </string-array>

    <string-array name="bottle_type_array">
        <item>Breast milk</item>
        <item>Formula</item>
    </string-array>

    <string-array name="diaper_status_array">
        <item>Wet</item>
        <item>Dirty</item>
        <item>Mixed</item>
        <item>Dry</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_textview">Home</string>
    <string name="calendar_textview">Calendar</string>
    <string name="graph_textview">Graph</string>
    <string name="name_text">Name</string>
    <string name="des_text">Des</string>
    <string name="todo_text">TODO</string>
    <string name="feeding_screen_text">Feeding Screen</string>
    <string name="diapering_text">Diapering</string>
    <string name="sleep_text">Sleep</string>
    <string name="mom_text">Mom</string>
    <string name="baby_s_name_text">Baby\'s Name</string>
    <string name="left_text">Left</string>
    <string name="right_text">Right</string>
    <string name="formula_text">Formula</string>
    <string name="feeding_options_text">Feeding Options</string>
    <string name="supplement_1_text">Supplement</string>
    <string name="left_1_text">Left</string>
    <string name="right_1_text">Right</string>
    <string name="left_button_text">Left button</string>
    <string name="left_2_text">Left</string>
    <string name="bottle_button_text">bottle button</string>
    <string name="meal_button_text">meal button</string>
    <string name="formula_1_text">Formula</string>
    <string name="letter_r_button_text">letter r button</string>
    <string name="left_b_text">Left</string>
    <string name="right_b_text">Right</string>
    <string name="formula_2_text">Formula</string>
    <string name="bottle_text">Bottle</string>
    <string name="bottle_mini_text">Bottle</string>
    <string name="bottle_corner_icon_text">bottle corner icon</string>
    <string name="time_label">Time</string>
    <string name="select_date_and_time_text">Select Date and Time</string>
    <string name="amount_label_text">Amount</string>
    <string name="enter_amount_text">Enter amount</string>
    <string name="oz_text">oz</string>
    <string name="enter_qty_text">Enter qty</string>
    <string name="save_1_text">Save</string>
    <string name="bottle_activity_lab_text">Bottle Activity</string>
    <string name="activity_summary_text">Activity Summary</string>
    <string name="activity_sum_text">Activity</string>
    <string name="left_side_1_label">Left side</string>
    <string name="chronometer_text">Chronometer</string>
    <string name="reset_button_des">Reset button</string>
    <string name="save_left_text">Save</string>
    <string name="righ_side_text">Righ side</string>
    <string name="right_side_text">Right side</string>
    <string name="details_text">Details</string>
    <string name="supplement_corner_icon_des">Supplement corner icon</string>
    <string name="supplemental_text">Supplemental</string>
    <string name="enter_details_text">Enter details</string>
    <string name="oz_1_text">oz</string>
    <string name="textview_label">TextView</string>
    <string name="diaper_icon_des">diaper icon</string>
    <string name="diapering_title_text">Diapering</string>
    <string name="time_label_text">Time</string>
    <string name="diaper_status_text">Diaper Status</string>
    <string name="save_btn_text">Save</string>
    <string name="sleep_icon_des_text">sleep icon des</string>
    <string name="time_s_label_text">Time</string>
    <string name="fell_asleep_text">Fell asleep</string>
    <string name="sleep_title_text">Sleep</string>
    <string name="woke_up_text">Woke up</string>
    <string name="end_time_hint">End time</string>
    <string name="supplement_text">Supplement</string>
    <string name="self_care_corner_text">Self Care Corner</string>
    <string name="nap_text">Nap</string>
    <string name="shower_text">Shower</string>
    <string name="eat_text">Eat</string>
    <string name="exercise_text">Exercise</string>
    <string name="nap_button_text">Nap button</string>
    <string name="shower_button_des">Shower button</string>
    <string name="eat_button_des">Eat button</string>
    <string name="exercise_button_des">Exercise button</string>
    <string name="nap_time_text">Nap Time</string>
    <string name="nap_text_1">Nap</string>
    <string name="nap_icon_image_text">nap icon image</string>
    <string name="nap_2_text">Nap</string>
    <string name="time_nap_2">Time</string>
    <string name="start_time_1_text">Start time</string>
    <string name="end_time_text">End time</string>
    <string name="diaper_change_text">Diaper Change</string>
    <string name="baby_manager_text">Baby Manager</string>


</resources>