<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/feeding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeding_options_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:id="@+id/left_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="15dp"
            android:text="@string/left_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/right_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/right_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/formula_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="15dp"
            android:text="@string/formula_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/supplement_option"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:text="@string/supplement_text"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/left_label"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:contentDescription="@string/left_button_text"
            android:onClick="left_button"
            android:paddingTop="10dp"
            android:text="@string/left_text"
            app:srcCompat="@drawable/letter_l" />

        <ImageView
            android:id="@+id/right_label"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:contentDescription="@string/letter_r_button_text"
            android:onClick="right_button"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/letter_r" />

        <ImageView
            android:id="@+id/bottle_label"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/bottle_button_text"
            android:onClick="formula_button"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/bottleicon2" />

        <ImageView
            android:id="@+id/meal_label"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/meal_button_text"
            android:onClick="meal_button"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/meal_bowl" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="383dp"
        android:layout_height="260dp">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/summary_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>
