<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="383dp"
    android:layout_height="260dp"
    tools:context=".FormulafeedingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="383dp"
        android:layout_height="260dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:contentDescription="@string/bottle_corner_icon_text"
            android:paddingHorizontal="10dp"
            android:src="@drawable/bottleicon2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottle_mini_text"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="59dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/datetime_label"
            android:layout_width="217dp"
            android:layout_height="51dp"
            android:hint="@string/select_date_and_time_text"
            android:inputType="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.361"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_label"
            app:layout_constraintVertical_bias="0.0"
            android:autofillHints="" />

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="73dp"
            android:layout_height="31dp"
            android:gravity="center"
            android:text="@string/amount_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datetime_label" />

        <EditText
            android:id="@+id/amountq_label"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:hint="@string/enter_qty_text"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_label" />

        <EditText
            android:id="@+id/oz_label"
            android:layout_width="49dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/oz_text"
            app:layout_constraintBottom_toBottomOf="@+id/amountq_label"
            app:layout_constraintStart_toEndOf="@+id/amountq_label" />

        <Spinner

            android:id="@+id/bottle_spinner"
            android:layout_width="158dp"
            android:layout_height="31dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/oz_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.623"
            app:layout_constraintStart_toEndOf="@+id/oz_label"
            app:layout_constraintTop_toTopOf="@+id/oz_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>






</FrameLayout>