<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="383dp"
    android:layout_height="260dp"
    tools:context=".FormulafeedingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="383dp"
        android:layout_height="260dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:contentDescription="@string/bottle_corner_icon_text"
            android:paddingHorizontal="10dp"
            android:src="@drawable/letter_l"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_side_1_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_left_label"
            android:layout_width="59dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/time_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/datetime_label"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="160dp"
            android:autofillHints=""
            android:hint="@string/select_date_and_time_text"
            android:inputType="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.361"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/chronometer_label"
            android:layout_width="104dp"
            android:layout_height="31dp"
            android:gravity="center"
            android:text="@string/chronometer_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datetime_label" />






    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>