<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="383dp"
    android:layout_height="260dp"
    android:paddingHorizontal="10dp"
    tools:context=".FormulafeedingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:contentDescription="@string/supplement_corner_icon_des"
            android:paddingHorizontal="10dp"
            android:src="@drawable/meal_bowl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/supple_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplemental_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_label"
            android:layout_width="59dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/details_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/enter_details_text"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/save_l_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702" />

        <Button
            android:id="@+id/save_l_button"
            android:layout_width="99dp"
            android:layout_height="40dp"
            android:layout_marginBottom="96dp"
            android:text="@string/save_left_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>